# racecar_camera

./: CMakeLists.txt  README.md  package.xml
config/: ros_racer_calibration.yaml
media/CAD/: leftbase.SLDPRT  rightbase.SLDPRT  supports.SLDPRT
src/: bbox_infer_node.cpp  bbox_infer_node.h  hough_detection.py  infer_process.cpp  infer_process.h  lane_detection_node.py  lane_following_control.py  line_detection.py  racecar_detection.py  racecar_pose_estimate.py  side_lane_detection_node.py  waypoint_follow.cpp
